bug fix and update readme

--- a/html/BSHelp12-3-6.html
+++ b/html/BSHelp12-3-6.html
@@ -16,7 +16,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Parameter not found" href="BSHelp12-3-7.html" />
-    <link rel="prev" title="Could not evaluate parameter" href="BSHelp12-3-5.html" /> 
+    <link rel="prev" title="Illegal parameter name" href="BSHelp12-3-8.html" /> 
   </head><body>
     <div class="related" role="navigation" aria-label="related navigation">
       <h3>Navigation</h3>
@@ -28,7 +28,7 @@
           <a href="BSHelp12-3-7.html" title="Parameter not found"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="BSHelp12-3-5.html" title="Could not evaluate parameter"
+          <a href="BSHelp12-3-8.html" title="Illegal parameter name"
              accesskey="P">previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="BSHelp.html">BeamScheme 1.00 documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="BSHelp12.html" >Errors and trouble shooting</a> &#187;</li>
@@ -56,8 +56,8 @@
         <div class="sphinxsidebarwrapper">
   <div>
     <h4>Previous topic</h4>
-    <p class="topless"><a href="BSHelp12-3-5.html"
-                          title="previous chapter">Could not evaluate parameter</a></p>
+    <p class="topless"><a href="BSHelp12-3-8.html"
+                          title="previous chapter">Illegal parameter name</a></p>
   </div>
   <div>
     <h4>Next topic</h4>
@@ -95,7 +95,7 @@
           <a href="BSHelp12-3-7.html" title="Parameter not found"
              >next</a> |</li>
         <li class="right" >
-          <a href="BSHelp12-3-5.html" title="Could not evaluate parameter"
+          <a href="BSHelp12-3-8.html" title="Illegal parameter name"
              >previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="BSHelp.html">BeamScheme 1.00 documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="BSHelp12.html" >Errors and trouble shooting</a> &#187;</li>
