--- a/html/BSHelp14.html
+++ b/html/BSHelp14.html
@@ -66,6 +66,7 @@
 </li>
 </ul>
 </div>
+<p><img alt="Note" src="_images/Note.png" /> The protocol definition files from previous version of BeamScheme are not compatible with version 1.00 and will give errors.</p>
 </section>
 
 
